--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,8 +17,11 @@
     "@types/react-dom": "^18.2.6",
     "antd": "^5.6.4",
     "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.2",
     "typescript": "^5.1.6"
   },
