implemented hashtag component with link

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -22,7 +22,8 @@
     "**/*.ts",
     "**/*.tsx",
     "utils/torus.js",
-    "utils/eth.js"
+    "utils/eth.js",
+    "components/imageZoom/index.js"
   ],
   "exclude": ["node_modules"]
 }
