--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
     "next": "^9.5.5",
     "next-redux-wrapper": "^6.0.2",
     "react": "^18.2.0",
@@ -25,7 +26,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.2",
+    "redux-saga": "^1.2.3",
     "styled-components": "^6.0.2",
     "typescript": "^5.1.6"
   },
