created and swtich to global actions

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -22,8 +22,7 @@
     "**/*.ts",
     "**/*.tsx",
     "utils/torus.js",
-    "utils/eth.js",
-    "components/imageZoom/index.js"
+    "utils/eth.js"
   ],
   "exclude": ["node_modules"]
 }
